--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
         "lint:fix": "eslint . --fix"
     },
     "dependencies": {
+        "@clerk/clerk-react": "^5.24.1",
         "@clerk/nextjs": "^6.12.2",
         "@radix-ui/react-slot": "^1.1.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
-        "convex": "^1.19.3",
+        "convex": "^1.19.4",
         "lucide-react": "^0.477.0",
         "next": "15.2.0",
         "next-themes": "^0.4.4",
