--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "dependencies": {
         "@clerk/clerk-react": "^5.24.1",
         "@clerk/nextjs": "^6.12.2",
+        "@hookform/resolvers": "^4.1.2",
+        "@radix-ui/react-dialog": "^1.1.6",
+        "@radix-ui/react-label": "^2.1.2",
         "@radix-ui/react-slot": "^1.1.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -19,12 +22,16 @@
         "lucide-react": "^0.477.0",
         "next": "15.2.0",
         "next-themes": "^0.4.4",
+        "nuqs": "^2.4.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-hook-form": "^7.54.2",
         "sonner": "^2.0.1",
         "svix": "^1.61.0",
         "tailwind-merge": "^3.0.2",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "vaul": "^1.1.2",
+        "zod": "^3.24.2"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
